# PriceBell

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  PriceBell.desktop  README.md  agents.md
.github/workflows/: build-windows.yml  ci.yml  release.yml
assets/: resources.qrc
assets/themes/: dark.qss
cmake/: VersionInfo.cmake
docs/: ARCHITECTURE.md  BUILDING.md  HANDLERS.md  PLUGINS.md  USER_GUIDE.md
docs/releases/: v1.4.0.md
docs/superpowers/plans/: 2026-04-04-v1.3.0.md
docs/superpowers/specs/: 2026-04-04-v1.3.0-design.md
examples/plugin-starter/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.hpp  README.md  example-plugin.json
i18n/: pricebell_ar.ts  pricebell_en.ts  pricebell_fr.ts
include/core/: AlertManager.hpp  AppController.hpp  DataStructs.hpp  IApplication.hpp  IPlugin.hpp  IPlugin2.hpp  IPriceHandler.hpp  PluginManager.hpp  PriceChecker.hpp  PricePoller.hpp  SteamHandler.hpp
include/gui/: AlertHistoryDialog.hpp  AnnouncementCenter.hpp  AnnouncementToast.hpp  FeatureAnnouncement.hpp  MainWindow.hpp  ProductCardDelegate.hpp  ProductCardView.hpp  ProductDetailPane.hpp  ProductDialog.hpp  SettingsDialog.hpp  TrayIcon.hpp  UpdateDialog.hpp  Widgets.hpp
include/handlers/: AmazonHandler.hpp  GenericWebHandler.hpp  SteamHandler.hpp  UdemyHandler.hpp
include/storage/: AlertRepository.hpp  Database.hpp  ProductRepository.hpp
include/utils/: AutoStartManager.hpp  Constants.hpp  CurrencyUtils.hpp  HttpClient.hpp  Logger.hpp  SettingsProvider.hpp  SingleInstanceGuard.hpp  UpdateChecker.hpp  UpdateDownloader.hpp
packaging/linux/: postinst  pricebell.desktop
packaging/windows/: installer.nsi
scripts/: bump-version.sh  sign.sh
src/: main.cpp
src/core/: AlertManager.cpp  AppController.cpp  Application.cpp  DataProcessor.cpp  PluginManager.cpp  PriceChecker.cpp  PricePoller.cpp  SteamHandler.cpp
src/gui/: AlertHistoryDialog.cpp  AnnouncementCenter.cpp  AnnouncementToast.cpp  MainWindow.cpp  ProductCardDelegate.cpp  ProductCardView.cpp  ProductDetailPane.cpp  ProductDialog.cpp  SettingsDialog.cpp  TrayIcon.cpp  UpdateDialog.cpp  Widgets.cpp
src/handlers/: AmazonHandler.cpp  GenericWebHandler.cpp  SteamHandler.cpp  UdemyHandler.cpp
src/storage/: AlertRepository.cpp  Database.cpp  ProductRepository.cpp
src/utils/: AutoStartManager.cpp  HttpClient.cpp  Logger.cpp  SettingsProvider.cpp  SingleInstanceGuard.cpp  UpdateChecker.cpp  UpdateDownloader.cpp
tests/: test_alert_dedup.cpp  test_currency_utils.cpp  test_logger.cpp  test_main.cpp  test_price_checker.cpp  test_repository.cpp  test_settings_provider.cpp  test_url_routing.cpp  test_url_validation.cpp  test_validation.cpp
